Added a few images for the gallery

--- a/indexInWork.html
+++ b/indexInWork.html
@@ -107,6 +107,46 @@
 									</div>
 								</article>
 								<article>
+									<a href="Images/photography/vieques_web.jpg" class="image">
+										<img src="Images/photography/vieques_web_thumb.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>North Carolina, USA</h3>
+									</div>
+								</article>
+								<article>
+									<a href="Images/photography/lightPier_web.jpg" class="image">
+										<img src="Images/photography/lightPier_web_thumb.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Vieques, Puerto Rico</h3>
+									</div>
+								</article>
+								<article>
+									<a href="Images/photography/ojos_point_web.jpg" class="image">
+										<img src="Images/photography/ojos_point_web_thumb.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Ojos del Salar, Chile</h3>
+									</div>
+								</article>
+								<article>
+									<a href="Images/photography/maine_sunrise_web.jpg" class="image">
+										<img src="Images/photography/maine_sunrise_web_thumb.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Maine, USA</h3>
+									</div>
+								</article>
+								<article>
+									<a href="Images/photography/bike_pier_web.jpg" class="image">
+										<img src="Images/photography/bike_pier_web_thumb.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Maine, USA</h3>
+									</div>
+								</article>
+								<article>
 									<a href="Images/photography/bjorn_web.jpg" class="image">
 										<img src="Images/photography/bjorn_web_thumb.jpg" alt="" />
 									</a>
