--- a/indexInWork.html
+++ b/indexInWork.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<script src="https://kit.fontawesome.com/24f84049c7.js" crossorigin="anonymous"></script>
 	</head>
 	<body class="is-preload">
 
@@ -38,7 +39,7 @@
 							<h2>Academics</h2>
 							<p>I'm a PhD candidate in Aerospace Engineering and NSF Fellow at MIT. For my Master's degree, I developed a guidance algorithm to allow satellites to rendezvous and dock with an uncontrolled tumbling object. For my PhD, I am studying the reduction of data latency in remote sensing satellite constellation. I hope to design systems and inform the aerospace industry of constellation architectures that will provide first responders with the situational awareness needed to tackle any unforseen disasater. </p>
 							<ul class="actions stacked">
-								<li><a href="Images/Manwei Chan CV.pdf" target="_blank" class="button">My Curriculum Vitae</a></li>
+								<li><a href="https://github.com/manweichan/SatLib" target="_blank" class="button">GitHub Link (In Work)</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -52,7 +53,7 @@
 							<h2>Professional</h2>
 							<p>I dream that one day space, and the experiences that accompany it, are not only available to governments and the ultra-wealthy. I've worked with various Aerospace companies to develop the commercial space industry in pursuit of this goal. With NanoRacks, I wrote proposals to both utilize the International Space Station and to build an private space station, with Orbit Fab, I analyzed an array of sensors and low-power communication for rendezvous and docking, and with stealth-mode start-up, I built and wrote space hardware and software to build a constellation to connect the traditionally unconnected. (PC:Steve Boxall/ZERO-G)</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="Images/Manwei Chan CV.pdf" target="_blank" target="_blank" class="button">My Curriculum Vitae</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -66,7 +67,7 @@
 							<h2>Space For All</h2>
 							<p>I founded the MIT Space Seminar, a speaker series that brings experts in the industry to the MIT community. Past speakers included C-suite execs such as Natalya Bailey and Andrew Rush, former astronauts such as Tony Antonelli, and indsutry veterans such as Pete Worden. During my tenure as the president of SEDS at MIT, I organized outreach initaitves to build dry ice rockets for middle school girls with the MIT society of women engineers and hosted MIT visits for the Eagle X Robotics Team from the Monterrey Institute of Technology in Mexico. I've also been a part of the Space Generation Fusion Forum Organizing Team in 2020, 2021, and 2022, putting together a high-profile conference for an international audience.</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="Images/2019 MIT Space Seminar posters V4.pdf" target="_blank" class="button">2019 Space Seminar Lineup</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -80,7 +81,7 @@
 							<h2>International</h2>
 							<p>I lived for a year in the Atacama Desert in Chile, working as a telescope technician for the CLASS telescope on Cerro Toco (8000 meters above sea level). During the day, I tended to the telescope and at night I conducted astronomy tours for tourists from all over the world. Before that, I also worked at CERN, living in Geneva, Switzerland, and working with an optical experiment that hoped to study the hypothetical chameleon particle.</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="https://www.youtube.com/watch?v=aNMAAecclHY&t=2s&ab_channel=JHUPhysicsAstronomy" target="_blank" class="button">2016 CLASS Field Report</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -111,7 +112,7 @@
 										<img src="Images/photography/vieques_web_thumb.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>North Carolina, USA</h3>
+										<h3>Vieques, Puerto Rico</h3>
 									</div>
 								</article>
 								<article>
@@ -119,7 +120,7 @@
 										<img src="Images/photography/lightPier_web_thumb.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Vieques, Puerto Rico</h3>
+										<h3>North Carolina, USA</h3>
 									</div>
 								</article>
 								<article>
@@ -219,69 +220,45 @@
 				<!-- Six -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Ipsum sed consequat</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
+							<h2>Some other links of interest</h2>
 							<div class="items style1 medium onscroll-fade-in">
+								<!-- <i class="fas fa-rocket"></i> -->
 								<section>
-									<span class="icon style2 major fa-gem"></span>
-									<h3>Lorem</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<a href="https://www.spacetalent.org/resources/space-talent-spotlight-manwei-chan">
+									<span class="icon style2 major solid fa-rocket"></span>
+									<h3>Space Talent Spotlight</h3>
+									<p>An interview with Space Talent, an affiliate of Space Capital, a venture capital firm for space-based technologies.</p>
+									</a>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-save"></span>
-									<h3>Ipsum</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<a href="https://www.sspi.org/articles/making-leaders-manwei-chan-project-manager-of-the-second-place-winning-mit-team-in-the-2018-sspi-seds-competition">
+									<span class="icon solid style2 major fa-podcast"></span>
+									<h3>Making Leaders</h3>
+									<p>A podcast interview with Robert Bell, executive director of the Space & Satellite Professionals International group.</p>
+									</a>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-chart-bar"></span>
-									<h3>Dolor</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<a href="https://www.sspi.org/articles/mit-teams-spacetug-design-takes-second-place-in-2018-sspiseds-usa-competition">
+									<span class="icon solid style2 major fa-satellite"></span>
+									<h3>SpaceTug Competition</h3>
+									<p>SSPI's article detailing our 2nd place placing in an SSPI SpaceTug design competition.</p>
+									</a>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-wifi"></span>
-									<h3>Amet</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<a href="https://www.youtube.com/watch?v=mxqiLPoY9-M&ab_channel=AgelessWonder">
+									<span class="icon solid style2 major fa-play-circle"></span>
+									<h3>Music</h3>
+									<p>My first ever musical track, produced during the COVID pandemic.</p>
+									</a>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-cog"></span>
-									<h3>Magna</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<a href="https://www.google.com/search?q=manwei+chan&rlz=1C5CHFA_enUS985US985&oq=manwei+chan&aqs=chrome.0.0i512j69i60l2.1886j0j7&sourceid=chrome&ie=UTF-8">
+									<span class="icon solid style2 major fa-book-reader"></span>
+									<h3>Google Scholar</h3>
+									<p>My Google Scholar page.</p>
+									</a>
 								</section>
-								<section>
-									<span class="icon style2 major fa-paper-plane"></span>
-									<h3>Tempus</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
-									<span class="icon solid style2 major fa-desktop"></span>
-									<h3>Aliquam</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
-									<span class="icon solid style2 major fa-sync-alt"></span>
-									<h3>Elit</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
-									<span class="icon solid style2 major fa-hashtag"></span>
-									<h3>Morbi</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
-									<span class="icon solid style2 major fa-bolt"></span>
-									<h3>Turpis</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
-									<span class="icon solid style2 major fa-envelope"></span>
-									<h3>Ultrices</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
-									<span class="icon solid style2 major fa-leaf"></span>
-									<h3>Risus</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
+								
 							</div>
 						</div>
 					</section>
