--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Professional</h2>
-							<p>I dream that one day space, and the experiences that accompany it, are not only available to governments and the ultra-wealthy. I've worked with various Aerospace companies to develop the commercial space industry in pursuit of this goal. With NanoRacks, I wrote proposals to both utilize the International Space Station and to build an private space station, with Orbit Fab, I analyzed an array of sensors and low-power communication for rendezvous and docking, and with stealth-mode start-up, I built and wrote space hardware and software to build a constellation to connect the traditionally unconnected. (PC:Steve Boxall/ZERO-G)</p>
+							<p>I dream that one day space, and the experiences that accompany it, are not only available to governments and the ultra-wealthy. I've worked with various Aerospace companies to develop the commercial space industry in pursuit of this goal. With NanoRacks, I wrote proposals to both utilize the International Space Station and to build a private space station, with Orbit Fab, I analyzed an array of sensors and low-power communication for rendezvous and docking, and with stealth-mode start-up, I built and wrote space hardware and software to build a constellation to connect the traditionally unconnected. (PC:Steve Boxall/ZERO-G)</p>
 							<ul class="actions stacked">
 								<li><a href="Images/Manwei Chan CV.pdf" target="_blank" target="_blank" class="button">My Curriculum Vitae</a></li>
 							</ul>
@@ -65,7 +65,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Space For All</h2>
-							<p>I founded the MIT Space Seminar, a speaker series that brings experts in the industry to the MIT community. Past speakers included C-suite execs such as Natalya Bailey and Andrew Rush, former astronauts such as Tony Antonelli, and indsutry veterans such as Pete Worden. During my tenure as the president of SEDS at MIT, I organized outreach initaitves to build dry ice rockets for middle school girls with the MIT society of women engineers and hosted MIT visits for the Eagle X Robotics Team from the Monterrey Institute of Technology in Mexico. I've also been a part of the Space Generation Fusion Forum Organizing Team in 2020, 2021, and 2022, putting together a high-profile conference for an international audience.</p>
+							<p>I founded the MIT Space Seminar, a speaker series that brings experts in the industry to the MIT community. Past speakers included C-suite execs such as Natalya Bailey and Andrew Rush, former astronauts such as Tony Antonelli, and industry veterans such as Pete Worden. During my tenure as the president of SEDS at MIT, I organized outreach initiatives to build dry ice rockets for middle school girls with the MIT society of women engineers and hosted MIT visits for the Eagle X Robotics Team from the Monterrey Institute of Technology in Mexico. I've also been a part of the Space Generation Fusion Forum Organizing Team in 2020, 2021, and 2022, putting together a high-profile conference for an international audience.</p>
 							<ul class="actions stacked">
 								<li><a href="Images/2019 MIT Space Seminar posters V4.pdf" target="_blank" class="button">2019 Space Seminar Lineup</a></li>
 							</ul>
@@ -224,35 +224,35 @@
 							<div class="items style1 medium onscroll-fade-in">
 								<!-- <i class="fas fa-rocket"></i> -->
 								<section>
-									<a href="https://www.spacetalent.org/resources/space-talent-spotlight-manwei-chan">
+									<a href="https://www.spacetalent.org/resources/space-talent-spotlight-manwei-chan" target="_blank">
 									<span class="icon style2 major solid fa-rocket"></span>
 									<h3>Space Talent Spotlight</h3>
 									<p>An interview with Space Talent, an affiliate of Space Capital, a venture capital firm for space-based technologies.</p>
 									</a>
 								</section>
 								<section>
-									<a href="https://www.sspi.org/articles/making-leaders-manwei-chan-project-manager-of-the-second-place-winning-mit-team-in-the-2018-sspi-seds-competition">
+									<a href="https://www.sspi.org/articles/making-leaders-manwei-chan-project-manager-of-the-second-place-winning-mit-team-in-the-2018-sspi-seds-competition"  target="_blank">
 									<span class="icon solid style2 major fa-podcast"></span>
 									<h3>Making Leaders</h3>
 									<p>A podcast interview with Robert Bell, executive director of the Space & Satellite Professionals International group.</p>
 									</a>
 								</section>
 								<section>
-									<a href="https://www.sspi.org/articles/mit-teams-spacetug-design-takes-second-place-in-2018-sspiseds-usa-competition">
+									<a href="https://www.sspi.org/articles/mit-teams-spacetug-design-takes-second-place-in-2018-sspiseds-usa-competition"  target="_blank">
 									<span class="icon solid style2 major fa-satellite"></span>
 									<h3>SpaceTug Competition</h3>
 									<p>SSPI's article detailing our 2nd place placing in an SSPI SpaceTug design competition.</p>
 									</a>
 								</section>
 								<section>
-									<a href="https://www.youtube.com/watch?v=mxqiLPoY9-M&ab_channel=AgelessWonder">
+									<a href="https://www.youtube.com/watch?v=mxqiLPoY9-M&ab_channel=AgelessWonder"  target="_blank">
 									<span class="icon solid style2 major fa-play-circle"></span>
 									<h3>Music</h3>
 									<p>My first ever musical track, produced during the COVID pandemic.</p>
 									</a>
 								</section>
 								<section>
-									<a href="https://www.google.com/search?q=manwei+chan&rlz=1C5CHFA_enUS985US985&oq=manwei+chan&aqs=chrome.0.0i512j69i60l2.1886j0j7&sourceid=chrome&ie=UTF-8">
+									<a href="https://scholar.google.com/citations?user=Bk6deNcAAAAJ&hl=en">
 									<span class="icon solid style2 major fa-book-reader"></span>
 									<h3>Google Scholar</h3>
 									<p>My Google Scholar page.</p>
