Added new photo with less orange and adjusted CV to not have as much personal info

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="Images/ParentsFave.jpg" alt="" />
+							<img src="Images/ParentsFaveAdjustedSquare.jpg" alt="" />
 						</div>
 					</section>
 
