Added some textual edits and fixed the error in the elevation of Cerro Toco

--- a/index.html
+++ b/index.html
@@ -6,12 +6,6 @@
 -->
 <html>
 	<head>
-		<title>Manwei Chan</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<script src="https://kit.fontawesome.com/24f84049c7.js" crossorigin="anonymous"></script>
 
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-VCGQ2KRC66"></script>
@@ -22,7 +16,16 @@
 
 		  gtag('config', 'G-VCGQ2KRC66');
 		</script>
+
+		<title>Manwei Chan</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<script src="https://kit.fontawesome.com/24f84049c7.js" crossorigin="anonymous"></script>
+
 		
+
 	</head>
 	<body class="is-preload">
 
@@ -48,7 +51,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Academics</h2>
-							<p>I'm a PhD candidate in Aerospace Engineering and NSF Fellow at MIT. For my Master's degree, I developed a guidance algorithm to allow satellites to rendezvous and dock with an uncontrolled tumbling object. For my PhD, I am studying the reduction of data latency in remote sensing satellite constellation. I hope to design systems and inform the aerospace industry of constellation architectures that will provide first responders with the situational awareness needed to tackle any unforseen disasater. </p>
+							<p>I'm a PhD candidate in Aerospace Engineering and NSF Fellow at MIT studying the reduction of data latency in remote sensing satellite constellations. In 2019, I earned my Master's degree at MIT, developing a guidance algorithm allowing satellites to rendezvous and dock with an uncontrolled tumbling object. Looking forward, I hope my research informs the aerospace industry of constellation architectures that will provide first responders with the situational awareness needed to tackle unforeseen disasters. </p>
 							<ul class="actions stacked">
 								<li><a href="https://github.com/manweichan/SatLib" target="_blank" class="button">GitHub Link (In Work)</a></li>
 							</ul>
@@ -62,7 +65,7 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Professional</h2>
-							<p>I dream that one day space, and the experiences that accompany it, are not only available to governments and the ultra-wealthy. I've worked with various Aerospace companies to develop the commercial space industry in pursuit of this goal. With NanoRacks, I wrote proposals to both utilize the International Space Station and to build a private space station, with Orbit Fab, I analyzed an array of sensors and low-power communication for rendezvous and docking, and with stealth-mode start-up, I built and wrote space hardware and software to build a constellation to connect the traditionally unconnected. (PC:Steve Boxall/ZERO-G)</p>
+							<p>I aim to break down the cost barriers around space travel and exploration. I believe the experiences and benefits of space should be accessible for all, not only governments and the ultra-wealthy. I've worked with various Aerospace companies in pursuit of our goal to develop the commercial space industry. With NanoRacks, I wrote proposals to both utilize the International Space Station and to build a private space station. With Orbit Fab, I analyzed an array of sensors and low-power communication methods for rendezvous and docking. Most recently, I built and wrote space hardware and software with a stealth mode start-up, constructing a telecommunications satellite constellation to connect the traditionally unconnected. (PC:Steve Boxall/ZERO-G)</p>
 							<ul class="actions stacked">
 								<li><a href="Images/Manwei Chan CV.pdf" target="_blank" target="_blank" class="button">My Curriculum Vitae</a></li>
 							</ul>
@@ -76,7 +79,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Space For All</h2>
-							<p>I founded the MIT Space Seminar, a speaker series that brings experts in the industry to the MIT community. Past speakers included C-suite execs such as Natalya Bailey and Andrew Rush, former astronauts such as Tony Antonelli, and industry veterans such as Pete Worden. During my tenure as the president of SEDS at MIT, I organized outreach initiatives to build dry ice rockets for middle school girls with the MIT society of women engineers and hosted MIT visits for the Eagle X Robotics Team from the Monterrey Institute of Technology in Mexico. I've also been a part of the Space Generation Fusion Forum Organizing Team in 2020, 2021, and 2022, putting together a high-profile conference for an international audience.</p>
+							<p>In 2018, I founded the MIT Space Seminar, a speaker series that brings experts to the MIT community, including c-suite executives such as Natalya Bailey and Andrew Rush; former astronauts such as Tony Antonelli; and industry veterans such as Pete Worden. During my tenure as the co-president of the Students for the Exploration and Development of Space (SEDS) at MIT, I organized outreach initiatives with the MIT Society of Women Engineers to build dry ice rockets for middle school girls and hosted MIT visits for the Eagle X Robotics Team from the Monterrey Institute of Technology in Mexico. I've also been a member of the Space Generation Fusion Forum Organizing Team in 2020, 2021, and 2022, establishing high-profile conferences for an international audience.</p>
 							<ul class="actions stacked">
 								<li><a href="Images/2019 MIT Space Seminar posters V4.pdf" target="_blank" class="button">2019 Space Seminar Lineup</a></li>
 							</ul>
@@ -90,7 +93,7 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>International</h2>
-							<p>I lived for a year in the Atacama Desert in Chile, working as a telescope technician for the CLASS telescope on Cerro Toco (8000 meters above sea level). During the day, I tended to the telescope and at night I conducted astronomy tours for tourists from all over the world. Before that, I also worked at CERN, living in Geneva, Switzerland, and working with an optical experiment that hoped to study the hypothetical chameleon particle.</p>
+							<p>I lived for a year in the Atacama Desert in Chile, working as a telescope technician for the CLASS telescope on Cerro Toco (5000 meters above sea level). During the day, I ensured the telescope ran smoothly and fixed any emergent issues. At night, I conducted astronomy tours for tourists from all over the world. As part of my Master's degree in Physics, I also worked at The European Organization for Nuclear Research (CERN), living in Geneva, Switzerland, and working on an optical experiment studying the hypothetical chameleon particle.</p>
 							<ul class="actions stacked">
 								<li><a href="https://www.youtube.com/watch?v=aNMAAecclHY&t=2s&ab_channel=JHUPhysicsAstronomy" target="_blank" class="button">2016 CLASS Field Report</a></li>
 							</ul>
@@ -245,21 +248,21 @@
 									<a href="https://www.sspi.org/articles/making-leaders-manwei-chan-project-manager-of-the-second-place-winning-mit-team-in-the-2018-sspi-seds-competition"  target="_blank">
 									<span class="icon solid style2 major fa-podcast"></span>
 									<h3>Making Leaders</h3>
-									<p>A podcast interview with Robert Bell, executive director of the Space & Satellite Professionals International group.</p>
+									<p>A podcast interview with Robert Bell, executive director of the Space & Satellite Professionals International (SSPI) group.</p>
 									</a>
 								</section>
 								<section>
 									<a href="https://www.sspi.org/articles/mit-teams-spacetug-design-takes-second-place-in-2018-sspiseds-usa-competition"  target="_blank">
 									<span class="icon solid style2 major fa-satellite"></span>
 									<h3>SpaceTug Competition</h3>
-									<p>SSPI's article detailing our 2nd place placing in an SSPI SpaceTug design competition.</p>
+									<p>Space & Satellite Professionals International's (SSPI) article detailing our 2nd place placing in an SSPI SpaceTug design competition.</p>
 									</a>
 								</section>
 								<section>
 									<a href="https://www.youtube.com/watch?v=mxqiLPoY9-M&ab_channel=AgelessWonder"  target="_blank">
 									<span class="icon solid style2 major fa-play-circle"></span>
 									<h3>Music</h3>
-									<p>My first ever musical track, produced during the COVID pandemic.</p>
+									<p>My first musical track, produced during the COVID pandemic.</p>
 									</a>
 								</section>
 								<section>
@@ -306,9 +309,9 @@
 						<div class="inner">
 							<ul class="icons">
 								<!-- <li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li> -->
-								<li><a href="https://www.facebook.com/manwei.chan/" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="https://www.instagram.com/themanwei/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="https://www.linkedin.com/in/manweichan/" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.facebook.com/manwei.chan/" target="_blank" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.instagram.com/themanwei/" target="_blank" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://www.linkedin.com/in/manweichan/" target="_blank" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<p>&copy; Manwei Dec 23, 2021. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
