Adding antarctica update feb 20 2023 with marion bike photo and new section

--- a/index.html
+++ b/index.html
@@ -48,6 +48,20 @@
 					</section>
 
 				<!-- Two -->
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="first">
+						<div class="content">
+							<h2>Antarctica</h2>
+							<p>I'm currently the BICEP telescope winter-over at Amundsen-Scott South Pole station. The BICEP telescope is probing the cosmic microwave background (the first light of our universe) for evidence of inflation, a key epoch theorized by cosmologists. As the winter-over, I ensure that the telescope is happily running through the winter season where we won't see the sun for 6 months and temperatures drop below -100 F. </p>
+							<ul class="actions stacked">
+								<li><a href="https://www.instagram.com/stellarpuns/" target="_blank" class="button">Follow the Adventure</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="Images/south_pole_reduc.jpg" alt="" />
+						</div>
+					</section>
+
+				<!-- Three -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Academics</h2>
@@ -61,7 +75,7 @@
 						</div>
 					</section>
 
-				<!-- Three -->
+				<!-- Four -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Professional</h2>
@@ -75,7 +89,7 @@
 						</div>
 					</section>
 
-				<!-- Four -->
+				<!-- Five -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Space For All</h2>
@@ -89,7 +103,7 @@
 						</div>
 					</section>
 
-				<!-- Five -->
+				<!-- Six -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>International</h2>
@@ -104,7 +118,7 @@
 					</section>
 
 
-				<!-- Six -->
+				<!-- Seven -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Photography</h2>
@@ -127,6 +141,14 @@
 									</a>
 									<div class="caption">
 										<h3>Vieques, Puerto Rico</h3>
+									</div>
+								</article>
+								<article>
+									<a href="Images/photography/marion_bike.jpg" class="image">
+										<img src="Images/photography/marion_bike_thumb.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>South Pole, Antarctica</h3>
 									</div>
 								</article>
 								<article>
@@ -231,7 +253,7 @@
 
 					</section>
 
-				<!-- Six -->
+				<!-- Eight -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Some other links of interest</h2>
@@ -317,10 +339,10 @@
 							<ul class="icons">
 								<!-- <li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li> -->
 								<li><a href="https://www.facebook.com/manwei.chan/" target="_blank" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="https://www.instagram.com/themanwei/" target="_blank" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://www.instagram.com/stellarpuns/" target="_blank" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="https://www.linkedin.com/in/manweichan/" target="_blank" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
-							<p>&copy; Manwei Dec 23, 2021. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+							<p>&copy; Manwei Feb 19, 2023. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
 					</footer>
 
