Adding updated CV and also adding Andover article to links

--- a/index.html
+++ b/index.html
@@ -260,6 +260,13 @@
 							<div class="items style1 medium onscroll-fade-in">
 								<!-- <i class="fas fa-rocket"></i> -->
 								<section>
+									<a href="https://www.andover.edu/news/2023/the-coolest-job-on-earth" target="_blank">
+									<span class="icon style2 major solid fa-newspaper"></span>
+									<h3>"The coolest job on Earth"</h3>
+									<p>An reflection of my time in Antarctica, printed in Andover Magazine.</p>
+									</a>
+								</section>								
+								<section>
 									<a href="https://www.spacetalent.org/resources/space-talent-spotlight-manwei-chan" target="_blank">
 									<span class="icon style2 major solid fa-rocket"></span>
 									<h3>Space Talent Spotlight</h3>
