Adding new photography images

--- a/index.html
+++ b/index.html
@@ -136,6 +136,22 @@
 									</div>
 								</article>
 								<article>
+									<a href="Images/photography/DSL_Space_Sized_web.jpg" class="image">
+										<img src="Images/photography/DSL_Space_Sized_web_thumb.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Dark Sector Laboratory, South Pole</h3>
+									</div>
+								</article>
+								<article>
+									<a href="Images/photography/coffee_sized_web.jpg" class="image">
+										<img src="Images/photography/coffee_sized_web_thumb.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Dark Sector Laboratory, South Pole</h3>
+									</div>
+								</article>
+								<article>
 									<a href="Images/photography/vieques_web.jpg" class="image">
 										<img src="Images/photography/vieques_web_thumb.jpg" alt="" />
 									</a>
