Changing that I graduted from MIT

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Academics</h2>
-							<p>I'm a PhD candidate in Aerospace Engineering and NSF Fellow at MIT studying the reduction of data latency in remote sensing satellite constellations. In 2019, I earned my Master's degree at MIT, developing a guidance algorithm allowing satellites to rendezvous and dock with an uncontrolled tumbling object. Looking forward, I hope my research informs the aerospace industry of constellation architectures that will provide first responders with the situational awareness needed to tackle unforeseen disasters. </p>
+							<p>I received my PhD in Aerospace Engineering from MIT in 2023. As an NSF Fellow, I studied the reduction of data latency in remote sensing satellite constellations. In 2019, I earned my Master's degree at MIT, developing a guidance algorithm allowing satellites to rendezvous and dock with an uncontrolled tumbling object. Looking forward, I hope my research informs the aerospace industry of constellation architectures that will provide first responders with the situational awareness needed to tackle unforeseen disasters. </p>
 							<ul class="actions stacked">
-								<li><a href="https://github.com/manweichan/SatLib" target="_blank" class="button">GitHub Link (In Work)</a></li>
+								<li><a href="https://github.com/manweichan/SatLib" target="_blank" class="button">GitHub Link</a></li>
 							</ul>
 						</div>
 						<div class="image">
