removing bloated images that aren't optimized for web

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="Images/matterhorn.jpeg" alt="" />
+							<img src="Images/home_images/matterhorn.jpeg" alt="" />
 						</div>
 					</section>
 
@@ -57,7 +57,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="Images/south_pole_reduc.jpg" alt="" />
+							<img src="Images/home_images/south_pole_reduc_72dpi.jpeg" alt="" />
 						</div>
 					</section>
 
@@ -71,7 +71,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="Images/ParentsFaveAdjustedLightSquare.jpg" alt="" />
+							<img src="Images/home_images/ParentsFaveAdjustedLightSquare.jpg" alt="" />
 						</div>
 					</section>
 
@@ -85,7 +85,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="Images/zeroGcropped.jpg" alt="" />
+							<img src="Images/home_images/zeroGcropped_reduc.jpeg" alt="" />
 						</div>
 					</section>
 
@@ -99,7 +99,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="Images/uyuni_cropped.jpg" alt="" />
+							<img src="Images/home_images/uyuni_cropped.jpg" alt="" />
 						</div>
 					</section>
 
@@ -113,7 +113,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="Images/my_work/class_cropped_new.jpg" alt="" />
+							<img src="Images/home_images/class_cropped_new.jpg" alt="" />
 						</div>
 					</section>
 
