adding copyright statement

--- a/photoGallery/copyright.html
+++ b/photoGallery/copyright.html
@@ -119,23 +119,65 @@
           <div class="col-md-7">
             <div class="row mb-5">
               <div class="col-12 ">
-                <h2 class="site-section-heading text-center">About Me</h2>
+                <h2 class="site-section-heading text-center">Copyright Statement</h2>
+
+                <p>This copyright statement applies to all photography & images found on this website, and any other sites found on the manweichan.com domain. Please read carefully before downloading, linking to, or printing copies for use.</p>
+
+                <h3>I. Proprietary Rights</h3>
+                <p>The photographs contained on this, and any other site under the manweichan.com domain, are the property of Manwei Chan and are protected by United States and International copyright laws. All copyright, trademark, and other intellectual property rights in this site, are the property of Manwei Chan.</p>
+
+                <h3>All Photographs on manweichan.com are copyrighted.</h3>
+                <p>No permission, either express or implied, is granted for the electronic transmission, storage, retrieval, or printing of the photographs contained on manweichan.com, other than that which is related to the normal "caching" practices of web browsers and activities such as downloading solely for your personal enjoyment. No parties/individuals visiting or viewing images from manweichan.com, may otherwise copy, modify, publish, transmit, or distribute the contents of the photographs found herein. Express written permission must be granted, on behalf of the photographer (copyright holder, Manwei Chan), in order to use these photographs for any purpose that is not outlined above.</p>
+
+                <h3>Your use of manweichan.com or viewing of this statement indicates your acceptance of these conditions.</h3>
+
+                <h3>II. Personal Use Criteria</h3>
+                <p>The following are a list of conditions where I, Manwei Chan, give individuals permission to link to (or copy) JPEG images and other material at no charge:</p>
+                <ol>
+                  <li>You may print a copy of any photograph for personal reference without  further permission.</li>
+                  <li>Students are welcome to download images and incorporate them into school reports, presentations, etc. for free so long as proper credit/citation is given, without my further permission.</li>
+                  <li>Anyone can download images from Desktops / Wallpapers for the express use of displaying them on screen on any personal computer that is not being used for commercial or public viewing purposes.</li>
+                </ol>
+
+                <h3>III. Free Web Usage Criteria</h3>
+                <p>The following conditions define my authorization for use of my image on the Web, free of charge, so long as proper attribution of copyright is given to me, Manwei Chan and include the e-mail address, mcadventuremedia@gmail.com in said attribution:</p>
+                <ol>
+                  <li>You may make LINKS to the images on pages you maintain for yourself for personal, non-commercial use.</li>
+                  <li>If you are preparing FREE online site guides for other photographers, bloggers, and photograph forums, you may make use of these images, BUT ONLY IF YOU ATTRIBUTE THEM AS DESCRIBED ABOVE.</li>
+                </ol>
+
+                <h3>IV. Commercial Use</h3>
+                <p>Those persons who wish to use the photography found on this site in a commercial fashion must receive written consent from me, Manwei Chan, prior to its commercial use. To obtain consent, interested parties should send an e-mail to mcadventuremedia@gmail.com. In that e-mail the following should be addressed:</p>
+                <ol>
+                  <li>Image(s) you would like to use.</li>
+                  <li>Where they will be displayed.</li>
+                  <li>How they will be displayed.</li>
+                  <li>Intent of its display.</li>
+                  <li>Duration of their public viewing.</li>
+                  <li>Any other information you feel would be useful.</li>
+                </ol>
+                <p>Any commercial use of my photography without prior consent is a violation of United States and International copyright law.</p>
+
+                <h3>V. Copyright Protection Tactics</h3>
+                <p>In attempts to maintain the integrity of the copyrighted photographs found on this site, several copyright protection methods have been utilized. Some of these tactics include, but are not limited to:</p>
+                <ol>
+                  <li>Placement of watermarks.</li>
+                  <li>Resizing of images.</li>
+                  <li>Conversion of images to low resolution for web use.</li>
+                </ol>
+                <p>If you would like to use a specific photograph with some of the copyright protection tactics removed, please e-mail me at mcadventuremedia@gmail.com and describe what the intended use of the imagery with the copyright protections tactics reduced. </p>
+
+                <h3>IV. Copyright Infringement is Serious</h3>
+                <p>The act of infringing on a copyright is a very serious business and is punishable by fines and/or imprisonment. I have worked very hard to present you with a quality photographic experience and I kindly ask that you will refrain from copying anything from the site onto your own hard drive, diskette(s), printer, etc. You are welcome to copy the hyperlinks to other sites found on manweichan.com, however, I ask that you do no copy any of the graphics, photographs, or articles from this site for your own use (other than the terms stated above). Doing so is an infringement of United States and International copyright laws.</p>
+
+
               </div>
             </div>
           </div>
 
         </div>
         
-        <div class="row mb-5">
-          <div class="col-md-7">
-            <img src="../Images/photography/mustache_web_square.jpg" alt="Images" class="img-fluid">
-          </div>
-          <div class="col-md-4 ml-auto">
-            <h3 class="text-white">Welcome</h3>
-            <p>Thanks for visiting my photography gallery! I love going on adventures and looking at the stars. I hope you find something you enjoy here as well.</p>
-            <p>Check out my personal website <a href="../index.html">HERE</a>.</p>
-          </div>
-        </div>
+       
 
 
         <!-- <div class="row site-section">
