Adding c copyright statement

--- a/photoGallery/copyright.html
+++ b/photoGallery/copyright.html
@@ -123,6 +123,8 @@
 
                 <p>This copyright statement applies to all photography & images found on this website, and any other sites found on the manweichan.com domain. Please read carefully before downloading, linking to, or printing copies for use.</p>
 
+                <p>© Copyright 2023 MC Adventure Media LLC.  All rights reserved.</p>
+
                 <h3>I. Proprietary Rights</h3>
                 <p>The photographs contained on this, and any other site under the manweichan.com domain, are the property of Manwei Chan and are protected by United States and International copyright laws. All copyright, trademark, and other intellectual property rights in this site, are the property of Manwei Chan.</p>
 
