Updating with OpEd link and published photography

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Photography</h2>
-							<p>Once in a while, I enjoy heading out into nature and capturing its beauty. See the full gallery <a href="photoGallery/gallery.html">HERE</a>.</p>
+							<p>Once in a while, I enjoy heading out into nature and capturing its beauty. My work has been published in SpaceNews. See the full gallery <a href="photoGallery/gallery.html">HERE</a>.</p>
 						</div>
 
 						<!-- Gallery -->
@@ -276,10 +276,17 @@
 							<div class="items style1 medium onscroll-fade-in">
 								<!-- <i class="fas fa-rocket"></i> -->
 								<section>
+									<a href="https://spacenews.com/continuous-human-presence-in-leo-a-true-commitment-not-a-temporary-excursion/" target="_blank">
+									<span class="icon style2 major solid fa-user-astronaut"></span>
+									<h3>SpaceNews</h3>
+									<p>An OpEd published in SpaceNews advocating for a continuous human presence in low Earth orbit.</p>
+									</a>
+								</section>	
+								<section>
 									<a href="https://www.andover.edu/news/2023/the-coolest-job-on-earth" target="_blank">
 									<span class="icon style2 major solid fa-newspaper"></span>
 									<h3>"The coolest job on Earth"</h3>
-									<p>An reflection of my time in Antarctica, printed in Andover Magazine.</p>
+									<p>A reflection of my time in Antarctica, printed in Andover Magazine.</p>
 									</a>
 								</section>								
 								<section>
